heading + first part

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>Little Sesame</h1>
+            <div class="title">
+              <h1>Little Sesame</h1>
+            </div>
           </div>
         </div>
       </div>
@@ -31,12 +33,14 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Our Flavors</h2>
+            <div class="heading">
+              <h2>Our Flavors</h2>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-4">
-            <div>
+            <div class="product">
               <img
                 src="img/caramelized-onions.png"
                 alt="Caramelized Onions Hummus Pack"
@@ -51,7 +55,7 @@
             </div>
           </div>
           <div class="col-4">
-            <div>
+            <div class="product">
               <img
                 src="img/herby-jalapeno.png"
                 alt="Herby Jalapeño Hummus Pack"
@@ -68,7 +72,7 @@
             </div>
           </div>
           <div class="col-4">
-            <div>
+            <div class="product">
               <img
                 src="img/smooth-classic.png"
                 alt="Smooth Classic Hummus Pack"
@@ -89,7 +93,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="bottom">
       <div class="container">
         <div class="row">
           <div class="col-12">
