--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,12 @@
               <h3>Camaramelized Onions</h3>
               <p>Sweet & sour onions slowly cooked with pomegranate molasses</p>
               <i class="fa-solid fa-circle-info"></i>
-              <p>
-                For a rich, deep flavor that blends perfectly into our creamy
-                hummus, creating a sweet, tangy, and utterly satisfying bite.
-              </p>
+              <div class="product-info">
+                <p>
+                  For a rich, deep flavor that blends perfectly into our creamy
+                  hummus, creating a sweet, tangy, and utterly satisfying bite.
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-4">
@@ -65,10 +67,12 @@
                 Super fresh vibrant blend of jalapeños & herbs. A little spicy
               </p>
               <i class="fa-solid fa-circle-info"></i>
-              <p>
-                A little spicy, this hummus brings a bold, zesty kick with a
-                smooth and creamy texture, perfect for dipping or spreading.
-              </p>
+              <div class="product-info">
+                <p>
+                  A little spicy, this hummus brings a bold, zesty kick with a
+                  smooth and creamy texture, perfect for dipping or spreading.
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-4">
@@ -83,10 +87,12 @@
                 original
               </p>
               <i class="fa-solid fa-circle-info"></i>
-              <p>
-                Delivering a perfectly balanced, velvety texture with a hint of
-                garlic for a timeless, delicious taste.
-              </p>
+              <div class="product-info">
+                <p>
+                  Delivering a perfectly balanced, velvety texture with a hint
+                  of garlic for a timeless, delicious taste.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -97,36 +103,38 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>It’s All About The Ride...</h2>
+            <div class="heading">
+              <h2>It’s All About The Ride...</h2>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-2 offset-1">
-            <div>
+            <div class="advantage">
               <img src="img/organic.png" alt="Plant drawing" />
               <h3>Certified Organic</h3>
             </div>
           </div>
           <div class="col-2">
-            <div>
+            <div class="advantage">
               <img src="img/energy.png" alt="Smiling bean drawing" />
               <h3>Big Bean Energy</h3>
             </div>
           </div>
           <div class="col-2">
-            <div>
+            <div class="advantage">
               <img src="img/climate.png" alt="Planet earth drawing" />
               <h3>Climate Friendly</h3>
             </div>
           </div>
           <div class="col-2">
-            <div>
+            <div class="advantage">
               <img src="img/community.png" alt="Victory fingers sign drawing" />
               <h3>Community First</h3>
             </div>
           </div>
           <div class="col-2">
-            <div>
+            <div class="advantage">
               <img src="img/vibes.png" alt="Hummus pack drawing" />
               <h3>Sunny Vibes</h3>
             </div>
