--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     ></script>
   </head>
   <body>
-    <div>
+    <div class="header">
       <div class="container">
         <div class="row">
           <div class="col-12">
